--- a/custom-media: index.hbs
+++ b/custom-media: index.hbs
@@ -3,123 +3,110 @@
 {{!-- The tag above means: insert everything in this file
 into the {body} tag of the default.hbs template --}}
 
+
 {{#post}}
 {{!-- Everything inside the #post block pulls data from the post --}}
 
+<style>
+  a.section-title {
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    text-decoration: none;
+  }
+
+  a.section-title .fa-solid {
+    margin-right: 3rem;
+  }
+
+  a.section-title {
+    font-size: 1.8rem;
+    position: relative;
+    display: inline-block;
+    margin-bottom: 1rem;
+  }
+
+  a.section-title:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--color-theme-orange);
+    transform: scaleX(0);
+    transform-origin: left center;
+    transition: transform 0.2s ease-out;
+  }
+
+  a.section-title:hover:after {
+    transform: scaleX(1);
+    font-weight: bold;
+  }
+
+  .dropdown .dropdown-menu a h1,
+  .dropdown .dropdown-menu a h5,
+  .dropdown .dropdown-menu p {
+    margin: 0;
+  }
+
+
+</style>
+
 <main id="site-main" class="site-main">
+
 {{> feature-image-to-banner}}
 
-  <div class="container my-5">
-    <h1 class="text-center">Media</h1>
-php
-Copy code
-<ul class="nav nav-tabs justify-content-center" id="media-tabs" role="tablist">
-  <li class="nav-item" role="presentation">
-    <button class="nav-link active" id="maps-tab" data-bs-toggle="tab" data-bs-target="#maps" type="button" role="tab" aria-controls="maps" aria-selected="true"><i class="fas fa-map"></i> Maps</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link" id="conversation-tab" data-bs-toggle="tab" data-bs-target="#conversation" type="button" role="tab" aria-controls="conversation" aria-selected="false"><i class="fas fa-comments"></i> Conversation</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link" id="news-tab" data-bs-toggle="tab" data-bs-target="#news" type="button" role="tab" aria-controls="news" aria-selected="false"><i class="fas fa-newspaper"></i> News</button>
-  </li>
-</ul>
+<article class="article {{post_class}} {{#match @custom.post_image_style "Full"}}image-full{{else match @custom.post_image_style "=" "Small"}}image-small{{/match}}">
 
-<div class="tab-content mt-4" id="media-tabs-content">
-  <div class="tab-pane fade show active" id="maps" role="tabpanel" aria-labelledby="maps-tab">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card">
-          <img src="map1.jpg" class="card-img-top" alt="Map 1">
-          <div class="card-body">
-            <h5 class="card-title">Map 1</h5>
-            <p class="card-text">Description of Map 1.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="map2.jpg" class="card-img-top" alt="Map 2">
-          <div class="card-body">
-            <h5 class="card-title">Map 2</h5>
-            <p class="card-text">Description of Map 2.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="map3.jpg" class="card-img-top" alt="Map 3">
-          <div class="card-body">
-            <h5 class="card-title">Map 3</h5>
-            <p class="card-text">Description of Map 3.</p>
-          </div>
-        </div>
-      </div>
+<section class="gh-content gh-canvas">
+  {{content}}
+
+  <div class="row">
+    <div class="col-12">
+      <a class="section-title" href="/media-conference">
+        <h1 class="d-flex align-items-center">
+          <i class="fa-solid fa-video me-2"></i>
+          Conference
+        </h1>
+      </a>
+      <p class="post-card-excerpt">
+        Dive deeper into the world of global China with our handpicked collection of captivating videos! You'll find everything from thought-provoking interviews with leading experts to thrilling recordings of the latest conferences, all in one place.
+      </p>
+      <br>
+      
+    </div>
+    <div class="col-12">
+      <a class="section-title" href="/media-events">
+        <h1 class="d-flex align-items-center">
+          <i class="fa-solid fa-calendar-days me-2"></i>
+          Events
+        </h1>
+      </a>
+      <p class="post-card-excerpt">
+        Take a step into the world of global China with our exciting timeline of events! From fascinating talks and workshops to groundbreaking conferences, you'll stay up-to-date on all the latest happenings in the world of global China.
+      </p>
+      <br>
+    </div>
+    <div class="col-12">
+      <a class="section-title" href="/media-news">
+        <h1 class="d-flex align-items-center">
+          <i class="fa-solid fa-newspaper me-2"></i>
+          News
+        </h1>
+      </a>
+      <p class="post-card-excerpt">
+        Keep your finger on the pulse of global China with our curated list of news articles. From breaking stories to in-depth analysis, you'll get a well-rounded view of all the latest happenings in politics, economics, culture, and society. Get ready to be informed and inspired!
+      </p>
+      <br>
     </div>
   </div>
-  <div class="tab-pane fade" id="conversation" role="tabpanel" aria-labelledby="conversation-tab">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card">
-          <img src="conversation1.jpg" class="card-img-top" alt="Conversation 1">
-          <div class="card-body">
-            <h5 class="card-title">Conversation 1</h5>
-            <p class="card-text">Description of Conversation 1.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="conversation2.jpg" class="card-img-top" alt="Conversation 2">
-          <div class="card-body">
-            <h5 class="card-title">Conversation 2</h5>
-            <p class="card-text">Description of Conversation 2.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="conversation3.jpg" class="card-img-top" alt="Conversation 3">
-          <div class="card-body">
-            <h5 class="card-title">Conversation 3</h5>
-            <p class="card-text">Description of Conversation 3.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="tab-pane fade" id="news" role="tabpanel" aria-labelledby="news-tab">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card">
-          <img src="news1.jpg" class="card-img-top" alt="News 1">
-          <div class="card-body">
-            <h5 class="card-title">News 1</h5>
-            <p class="card-text">Description of News 1.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="news2.jpg" class="card-img-top" alt="News 2">
-          <div class="card-body">
-            <h5 class="card-title">News 2</h5>
-            <p class="card-text">Description of News 2.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="news3.jpg" class="card-img-top" alt="News 3">
-          <div class="card-body">
-            <h5 class="card-title">News 3</h5>
-            <p class="card-text">Description of News 3.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </div>
+
+</section>
+
+
+
+</article>
 </main>
+
 {{/post}}
