--- a/custom-maps: index.hbs
+++ b/custom-maps: index.hbs
@@ -8,9 +8,14 @@ into the {body} tag of the default.hbs template --}}
         transition: transform 0.3s ease-out;
         position: relative;
     }
+    .index-image-card:hover {
+        transform: scale(1.05);
+        border-left: 2px solid var(--color-theme-blue);
+        box-shadow: 0 0 5px var(--color-theme-blue);
+    }
     .index-image-card:hover img {
         filter: brightness(0.5);
-        transition: 0.15s ease-out;
+        transition: 0.2s ease-out;
     }
     .index-image-card:hover::before {
         opacity: 1;
@@ -25,12 +30,18 @@ into the {body} tag of the default.hbs template --}}
         font-weight: bold;
         text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
         opacity: 0.8;
-        transition: 0.3s ease-out;
+        transition: opacity 0.3s ease-out;
+        display: inline-block;
+        text-align: center;
     }
     .index-image-card:hover h1 {
-        font-size: 3rem;
         text-shadow: 2px 2px var(--color-theme-blue);
+        font-size: 3rem;
         opacity: 1;
+        width: 100%;
+    }
+    .index-image-card .position-relative {
+        text-align: center;
     }
 
 </style>
@@ -46,7 +57,8 @@ into the {body} tag of the default.hbs template --}}
 <div class="row mt-5 gx-5 gy-5"> 
     {{#get "pages" filter="slug:~^'maps-'"  limit="all" }}
     {{#foreach pages}}
-        <div class="index-image-card col-sm-12 col-md-6 col-lg-6 mb-6 mb-lg-0">
+        <div class="index-image-card col-sm-12 col-md-6 col-lg-6 mb-6 mb-lg-0 
+        text-center d-flex justify-content-center">
             {{!-- clickable feature image with title overlayed on it --}}
             <a href="{{url}}" class="d-block">
             <div class="position-relative">
