--- a/custom-media: conference.hbs
+++ b/custom-media: conference.hbs
@@ -4,36 +4,41 @@
 
 <main id="site-main" class="site-main">
 
-<article class="article {{post_class}}">
+{{> feature-image-to-banner}}
 
-    <header class="article-header gh-canvas">
+<section class="gh-content gh-canvas">
+    {{content}}
+</section>
 
-        <h1 class="article-title">{{title}}</h1>
-
-        {{#if feature_image}}
-            <figure class="article-image">
-                {{!-- This is a responsive image, it loads different sizes depending on device
-                https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
-                <img
-                    srcset="{{img_url feature_image size="s"}} 300w,
-                            {{img_url feature_image size="m"}} 600w,
-                            {{img_url feature_image size="l"}} 1000w,
-                            {{img_url feature_image size="xl"}} 2000w"
-                    sizes="(min-width: 1400px) 1400px, 92vw"
-                    src="{{img_url feature_image size="xl"}}"
-                    alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
-                />
-                {{#if feature_image_caption}}
-                    <figcaption>{{feature_image_caption}}</figcaption>
-                {{/if}}
-            </figure>
-        {{/if}}
-
-    </header>
-
+{{!-- <article class="article {{post_class}} {{#match @custom.post_image_style "Full"}}image-full{{else match @custom.post_image_style "=" "Small"}}image-small{{/match}}">
     <section class="gh-content gh-canvas">
         {{content}}
+
+        <link rel="stylesheet" type="text/css" href="{{asset "built/author-list.css"}}" />
+
+        <div class="author-grid">
+            {{#get "authors" filter="slug:~^'author-'" limit="all"}}
+                {{#foreach authors}}
+                    <a href="{{url}}">
+                        <div class="author-card">
+                            <div class="profile-image">
+                            {{#if profile_image}}
+                                <img src="{{img_url profile_image size="s"}}" alt="{{name}}">
+                            {{else}}
+                                <span class="profile-image-placeholder">{{name.[0]}}</span>
+                            {{/if}}
+                            </div>
+                            <h2>{{name}}</h2>
+                            <p>{{bio}}</p>
+                        </div>
+                    </a>
+                {{/foreach}}
+            {{/get}}
+        </div>
     </section>
+
+</article> --}}
+
 
 </article>
 </main>
