--- a/custom-media: news.hbs
+++ b/custom-media: news.hbs
@@ -1,41 +1,36 @@
 {{!< default}}
 
+{{!-- The tag above means: insert everything in this file
+into the {body} tag of the default.hbs template --}}
 
+<style>
+    .kg-card {
+        background-color: white;
+        border: 1px solid #e5e5e5;
+        border-radius: 4px;
+    }
+
+    .kg-card:hover {
+        transform: scale(1.05);
+        border: 1px solid var(--color-theme-blue);
+        transition: all 0.1s ease-in-out;
+    }
+</style>
 
 {{#post}}
+{{!-- Everything inside the #post block pulls data from the post --}}
 
 <main id="site-main" class="site-main">
 
-<article class="article {{post_class}}">
+{{> feature-image-to-banner}}
 
-    <header class="article-header gh-canvas">
-
-        <h1 class="article-title">{{title}}</h1>
-
-        {{#if feature_image}}
-            <figure class="article-image">
-                {{!-- This is a responsive image, it loads different sizes depending on device
-                https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
-                <img
-                    srcset="{{img_url feature_image size="s"}} 300w,
-                            {{img_url feature_image size="m"}} 600w,
-                            {{img_url feature_image size="l"}} 1000w,
-                            {{img_url feature_image size="xl"}} 2000w"
-                    sizes="(min-width: 1400px) 1400px, 92vw"
-                    src="{{img_url feature_image size="xl"}}"
-                    alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
-                />
-                {{#if feature_image_caption}}
-                    <figcaption>{{feature_image_caption}}</figcaption>
-                {{/if}}
-            </figure>
-        {{/if}}
-
-    </header>
+<article class="article {{post_class}} {{#match @custom.post_image_style "Full"}}image-full{{else match @custom.post_image_style "=" "Small"}}image-small{{/match}}">
 
     <section class="gh-content gh-canvas">
         {{content}}
+
     </section>
+
 
 </article>
 </main>
