--- a/partials/nav-megamenu/media.hbs
+++ b/partials/nav-megamenu/media.hbs
@@ -15,7 +15,7 @@
             <div class="row my-3 d-flex">
             {{#get "pages" filter="slug:~^'media-'" limit="all"}}
                     {{#foreach pages}}
-                        <div class="col-md-12 col-lg-4 mb-5 mb-lg-0">
+                        <div class="col-12 col-md-4 col-lg-4 mb-5 mb-lg-0">
                             <div class="pt-2">
                                     <i class="fas fa-caret-right pe-2" aria-hidden="true"></i>
                                     <a href="{{url}}">
