--- a/assets/css/carousel-slider.css
+++ b/assets/css/carousel-slider.css
@@ -5,8 +5,8 @@
     margin-top: 30px;
     margin-bottom: 30px;
     min-height: 300px;
-    border: black solid 0.2rem;
-    border-radius: 5px;
+    /* border: black solid 0.2rem;
+    border-radius: 5px; */
     left: 50%;
     transform: translate(-50%);
 }
